changed nav style

--- a/src/app/home/about/about.component.css
+++ b/src/app/home/about/about.component.css
@@ -32,6 +32,7 @@
 .svgi {
     /* background-color: whitesmoke; */
     height: 40rem;
+    padding: 25px;
 }
 
 /* Carousal row background color */
