--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -16,14 +16,14 @@
     </div>
     <div class="carousel-item">
       <div class="row align-items-center rbg">
-        <div class="col-md-5 col-sm-12 col-12 col-lg-6">
-          <img src="../../../assets/images/reshot-icon-delivery-3YR572A8CB.svg" class="d-block w-100 svgi" alt="...">
+        <div class="col-md-7 col-sm-12 col-12 col-lg-6">
+          <img src="../../../assets/images/reshot-icon-delivery-3YR572A8CB.svg" class="d-block svgi px-5" alt="...">
         </div>
-        <div class="col-md-7 col-sm-12 col-12 col-lg-5 px-5">
+        <div class="col-md-5 col-sm-12 col-12 col-lg-5 px-5">
           
             <h5 class="fs-2">India's most reliable, dedicated and expert online Transport logistics services partner!</h5>
            
-            <p class="fs-4 ms-3 mt-5"> <span class="ms-5">We</span> are the “best-in-class and cost-effective transporter” as defined by our customers and serving this industry for many years.</p>
+            <p class="fs-4 mt-5"> We are the “best-in-class and cost-effective transporter” as defined by our customers and serving this industry for many years.</p>
           
 
         </div>
@@ -34,12 +34,12 @@
     <div class="carousel-item">
       <div class="row align-items-center rbg">
         <div class="col-md-5 col-sm-12 col-12 col-lg-6">
-          <img src="../../../assets/images/reshot-icon-route-location-D62LUFYXP7.svg" class="d-block w-100 svgi" alt="...">
+          <img src="../../../assets/images/reshot-icon-route-location-D62LUFYXP7.svg" class="d-block svgi py-5" alt="...">
         </div>
       
           <div class="col-md-7 col-sm-12 col-12 col-lg-5 px-5">
             <h5 class="fs-2">Delivery at your door step. Just tell us the pickup and drop location. You can track the delivery easily.</h5>
-            <p class="fs-4 ms-3 mt-5"><span class="ms-5">No</span> matter where you are, we provide delivery on time. Just Trust-A-Bro. We got you bruh.</p>
+            <p class="fs-4 mt-5">No matter where you are, we provide delivery on time. Just Trust-A-Bro. We got you bruh.</p>
           </div>
         
       </div>
