--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -14,7 +14,7 @@
                 
                 <div class="text-center d-flex justify-content-around">
                     <a class="chapa" routerLink="/home/changepass"><button class="btn btn-warning mt-3">change password?</button></a>
-                    <button type="submit" class="btn btn-success w-50 mt-3" [disabled]='!loginForm.valid'>Login</button>
+                    <button type="submit" class="btn btn-warning w-50 mt-3" [disabled]='!loginForm.valid'>Login</button>
                 </div>
                 
             </form> 
