--- a/src/app/home/nav/nav.component.css
+++ b/src/app/home/nav/nav.component.css
@@ -11,7 +11,7 @@
 
 /* Navbar background */
 .bgc {
-    background: linear-gradient( to left, #FFF1AF, #FFC286);
+    background-color: #66806A;
     
 }
 
