--- a/src/app/home/admin/admin.component.html
+++ b/src/app/home/admin/admin.component.html
@@ -6,17 +6,17 @@
         <form [formGroup]="empForm" (ngSubmit)="onSubmit()">
 
             <div class="form-group">
-                <label for="username"><h5>Name:</h5></label>
+                <label for="username"><h5 class="fw-bold">Name:</h5></label>
                 <input type="text" id="username" pInputText name="username" formControlName="username" placeholder="Add Username"> 
                 
             </div>
             <div class="form-group">
-                <label for="Password"><h5>Password:</h5></label>
+                <label for="Password"><h5 class="fw-bold">Password:</h5></label>
                 <input type="text"  id="Password" pInputText name="password" formControlName="password" placeholder="Add Password">
             </div>
             <div class="text-center">
             
-                <button type="submit" class="btn btn-success w-50 mt-3" [disabled]='!empForm.valid'>Add</button>
+                <button type="submit" class="btn btn-warning w-50 mt-3" [disabled]='!empForm.valid'>Add</button>
             </div>   
             
         </form> 
@@ -27,7 +27,7 @@
                 <h3>User List</h3>
             </div>
             <div class="container px-5">
-                <table class="table table-primary">
+                <table class="table tbg">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
