--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -1,6 +1,5 @@
 .parent {
-    background: -webkit-linear-gradient(to right, #fff, #076585);  
-    background: linear-gradient(to right, #fff, #076585); 
+    background-color: whitesmoke;
     
     
     height: 92vh;
@@ -10,8 +9,8 @@
     /* margin: 8% auto; */
     max-width: 500px;
     
-    background: -webkit-linear-gradient(to right, #bfe9ff, #ff6e7f);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #bfe9ff, #ff6e7f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: #B4C6A6;
+    
     /* margin-top: 200px; */
     padding: 50px;
     border-radius: 15px;
