--- a/src/app/vann/vann.component.html
+++ b/src/app/vann/vann.component.html
@@ -1,25 +1,23 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light h-100">
+  <div class="container-fluid">
+    <a class="navbar-brand ms-5 mx-1 ps-3" href="#">Van Module</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto me-5 ">
+        <li class="nav-link"><button class="btn btn-primary me-5" (click)="show()">Add</button></li>
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light h-100">
-    <div class="container-fluid">
-      <a class="navbar-brand ms-3" href="#">Van Module</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-link"><button class="btn btn-primary me-3" (click)="show()">Add</button></li>
-          
-        </ul>
-  
-      </div>
+      </ul>
+
     </div>
-  </nav>
-</div>
+  </div>
+</nav>
 
-<div class="container mt-3">
-  <table class="table table-sm table-striped">
+
+<div class="container table-responsive mt-3">
+  <table class="table  table-striped">
     <thead class="text-center">
       <tr>
         <th scope="col">#</th>
