--- a/src/app/zone/zone-location/zone-location.component.html
+++ b/src/app/zone/zone-location/zone-location.component.html
@@ -1,26 +1,12 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-        
-        </div>
-    </div>
-    <div class="row">
-      <div class="col">
-      
-      </div>
-    </div>
-</div>
-
-
 <div class="container-fluid parent">
   <div class="row d-flex justify-content-center h-100">
       <div class="col form-container my-auto">
           <form (ngSubmit)="onSubmit()" #f="ngForm">
-              <div class="form-group text-center">
+              <div class="form-group">
                   <label for="code"><h5>Zone</h5></label>
                     <p-dropdown [options]="cities" name="selectedZone"  [(ngModel)]="selectedZone" optionLabel="name" [ngModelOptions]="{standalone: true}"></p-dropdown>
               </div>
-              <div class="form-group text-center">
+              <div class="form-group">
                   <label for="location"><h5>Location</h5></label>
                   <p-multiSelect [options]="locations"   name="selectedLocations" [(ngModel)]="selectedLocations" optionLabel="location" [ngModelOptions]="{standalone: true}"></p-multiSelect>
               </div>
@@ -30,4 +16,31 @@
           </form> 
       </div>
   </div>
+</div>
+
+<div class="container table-responsive">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Zone</th>
+            <th scope="col">Locations</th>
+         
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let detail of zoneLocations">
+           
+            <td scope="row">{{ detail.id }}</td>
+            <td scope="row">{{ detail.zone }}</td>
+            
+            <div scope="row" class="d-inline-block" *ngFor="let d of detail.locations">
+                <td class="">{{d.location}}</td>
+            </div>
+        
+            
+          </tr>
+       
+        </tbody>
+      </table>
 </div>
