refresh problem fixed

--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -22,6 +22,9 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/zone/zone-location"><button class="btn btn-light">Zone-L</button></a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/zone/zone-van"><button class="btn btn-light">Zone-V</button></a>
+              </li>
               <li class="nav-item dropdown pe-5 me-2">
                 <a class="nav-link dropdown" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <div *ngIf="isAdmin"><i class="fa-brands fa-app-store"></i></div>
