--- a/src/app/home/admin/admin.component.html
+++ b/src/app/home/admin/admin.component.html
@@ -27,7 +27,7 @@
                 <h3>User List</h3>
             </div>
             <div class="container px-5">
-                <table class="table tbg">
+                <table class="table tb">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
