--- a/src/app/location/location-edit/location-edit.component.html
+++ b/src/app/location/location-edit/location-edit.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="form-group">
                     <label for="location"><h5>Location:</h5></label>
-                    <input type="text" style="text-transform: capitalize;" id="location" #location="ngModel" pInputText name="location" placeholder="Enter Location" ngModel required>
+                    <input type="text" id="location" #location="ngModel" pInputText name="location" pattern="[A-Z]{1,}[a-z]" placeholder="Enter Location" ngModel required>
                     <p class="m-2" style="color: yellow;" *ngIf="!location.valid && location.touched">* Please add a location</p>
                 </div>
                 <div class="text-center">
