--- a/src/app/vann/add/add.component.html
+++ b/src/app/vann/add/add.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid parent">
-    <div class="row d-flex justify-content-center h-100">
+    <div class="row d-flex mx-auto h-100">
         <div class="col form-container my-auto">
             <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
@@ -7,7 +7,6 @@
                     <input type="text" id="location" pInputText name="code" formControlName="code" placeholder="Enter Code">
                     
                 </div>
-               
 
                 <div class="form-group">
                     <label for="name"><h5>Name:</h5></label>
