--- a/src/app/vann/update/update.component.css
+++ b/src/app/vann/update/update.component.css
@@ -1,15 +1,13 @@
 .parent {
-    height: 100vh;
-    background: -webkit-linear-gradient(to right, #fff, #076585);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #fff, #076585); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   background-color: whitesmoke;
+   margin: 30px;
+   padding: 20px;
 }
 
 .form-container {
     /* margin: 8% auto; */
     max-width: 500px;
-    background: -webkit-linear-gradient(to right, #bfe9ff, #ff6e7f);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #bfe9ff, #ff6e7f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    /* margin-top: 200px; */
+    background-color: #B4C6A6;
     padding: 50px;
     border-radius: 15px;
 
@@ -33,6 +31,25 @@ input {
 input.ng-invalid.ng-touched {
     border: 5px solid red;
 }
+
+
+/* Dynamic dialog */
+::ng-deep .van .p-dialog-header{
+    background-color: #66806A;
+    color: #fff;
+    
+}      
+ 
+::ng-deep .van .p-dialog-content {
+    background-color: whitesmoke;
+    overflow-x: hidden;
+    overflow-y: hidden;
+ 
+}
+::ng-deep .van .p-dialog-header .p-dialog-header-icon {
+    color:whitesmoke;
+} 
+
 
 
 
