--- a/src/app/vann/vann.component.html
+++ b/src/app/vann/vann.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light h-100">
   <div class="container-fluid">
-    <a class="navbar-brand ms-5 mx-1 ps-3" href="#">Van Module</a>
+    <a class="navbar-brand ms-4 ps-4" href="#">Van Module</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto me-5 ">
-        <li class="nav-link"><button class="btn btn-primary me-5" (click)="show()">Add</button></li>
+        <li class="nav-link"><button class="btn btn-primary me-5" (click)="show()">Add Van</button></li>
 
       </ul>
 
@@ -16,20 +16,20 @@
 </nav>
 
 
-<div class="container table-responsive mt-3">
+<div class="container table-responsive mt-5">
   <table class="table  table-striped">
     <thead class="text-center">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Code</th>
-        <th scope="col">Name</th>
-        <th scope="col">Model</th>
-        <th scope="col">Brand</th>
-        <th scope="col">Year</th>
-        <th scope="col">Color</th>
-        <th scope="col">Regno</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Delete</th>
+        <th class="table-success" scope="col">#</th>
+        <th class="table-success" scope="col">Code</th>
+        <th class="table-success" scope="col">Name</th>
+        <th class="table-success" scope="col">Model</th>
+        <th class="table-success" scope="col">Brand</th>
+        <th class="table-success" scope="col">Year</th>
+        <th class="table-success" scope="col">Color</th>
+        <th class="table-success" scope="col">Regno</th>
+        <th class="table-success" scope="col">Edit</th>
+        <th class="table-success" scope="col">Delete</th>
       </tr>
     </thead>
     <tbody class="text-center align-center">
