--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -12,8 +12,8 @@
                     <input type="text"  id="Password" pInputText name="password" formControlName="password" placeholder="Enter Password">
                 </div>
                 
-                <div class="text-center d-flex justify-content-around">
-                    <a class="chapa" routerLink="/home/changepass"><button class="btn btn-warning mt-3">change password?</button></a>
+                <div class="text-center">
+                    
                     <button type="submit" class="btn btn-warning w-50 mt-3" [disabled]='!loginForm.valid'>Login</button>
                 </div>
                 
