--- a/src/app/home/nav/nav.component.css
+++ b/src/app/home/nav/nav.component.css
@@ -3,15 +3,18 @@
 .a{
     color: #fff;
     border: 1px solid;
-    background-color: darkgreen;
+    /* background-color: darkgreen; */
+    background-color: #66806A;
+
     padding: 2px;
     
 }
 
 
-/* Navbar background */
-.bgc {
+/* Navbar */
+.navv {
     background-color: #66806A;
+    height: 60px;
     
 }
 
@@ -21,6 +24,12 @@
     margin-top: 2px;
     font-size: 35px;
     color: #fff;
+    transform: perspective(100px) translateZ(0px) r;
+    transition: transform 200ms ease;
+}
+
+.fa-app-store:hover {
+    transform:  perspective(100px) translateZ(12px);
 }
 
 /* navbar user icon */
@@ -31,4 +40,49 @@
     color: #fff;
 }
 
-/* button active */
+/* a */
+
+.links {
+    position: relative;
+    display: inline-block;
+    transition: .3s;
+    text-decoration: none;
+  }
+  
+.links::after {
+    position: absolute;
+    bottom: .5em;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: whitesmoke;
+    opacity: 0;
+    transition: .3s;
+  }
+  
+.links:hover::after {
+    bottom: 0;
+    opacity: 1;
+    color: whitesmoke;
+  }
+  
+.links:hover {
+    color: whitesmoke;
+  }
+
+
+  .chapa {
+    color: #000;
+    text-decoration: none;
+   
+  
+}
+
+.custom {
+    background-color: #66806A;
+    color: #fff;
+    padding-left: 20px;
+    font-weight: 800;
+    z-index: 1000;
+}
