--- a/src/app/location/location-master/location-master.component.html
+++ b/src/app/location/location-master/location-master.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid parent">
-    <div class="row d-flex justify-content-center h-100">
+    <div class="row mx-auto h-100">
         <div class="col form-container my-auto">
             <form (ngSubmit)="onSubmit()" #f="ngForm">
                 <div class="form-group">
