--- a/src/app/zone/zone-location/zone-location.component.html
+++ b/src/app/zone/zone-location/zone-location.component.html
@@ -1,42 +1,65 @@
-<div class="container-fluid parent">
-  <div class="row d-flex justify-content-center h-100">
-      <div class="col form-container my-auto">
-          <form (ngSubmit)="onSubmit()" #f="ngForm">
-              <div class="form-group">
-                  <label for="code"><h5>Zone</h5></label>
-                    <p-dropdown [options]="cities" name="selectedZone"  [(ngModel)]="selectedZone" optionLabel="name" [ngModelOptions]="{standalone: true}"></p-dropdown>
-              </div>
-              <div class="form-group">
-                  <label for="location"><h5>Location</h5></label>
-                  <p-multiSelect [options]="locations"   name="selectedLocations" [(ngModel)]="selectedLocations" optionLabel="location" [ngModelOptions]="{standalone: true}"></p-multiSelect>
-              </div>
-              <div class="text-center">
-                  <button type="submit" class="btn btn-success w-50 mt-3" [disabled]='!f.valid'>Save</button>
-              </div>   
-          </form> 
-      </div>
-  </div>
-</div>
 
-<div class="container d-flex justify-content-center table-responsive">
-    <table class="table table-bordered tb">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light h-100">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-5" href="#">Zone-Locations</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto me-5">
+            <li class="nav-link me-5"><button type="button" class="btn btn-primary" (click)="showDialog()" icon="pi pi-info-circle"
+              label="Show">Add Zone</button></li>
+    
+          </ul>
+    
+        </div>
+      </div>
+    </nav>
+    
+    <p-dialog  [(visible)]="display" [modal]="true" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [header]="header" styleClass="zone" [draggable]="false" [baseZIndex]="10000">
+      <div class="container-fluid parent">
+        <div class="row mx-auto h-100">
+            <div class="col form-container my-auto">
+                <form (ngSubmit)="onSubmit()" #f="ngForm">
+                    <div class="form-group">
+                        <label for="code"><h5>Zone</h5></label>
+                          <p-dropdown [options]="cities" name="selectedZone"  [(ngModel)]="selectedZone" optionLabel="name" [ngModelOptions]="{standalone: true}"></p-dropdown>
+                    </div>
+                    <div class="form-group">
+                        <label for="location"><h5>Location</h5></label>
+                        <p-multiSelect [options]="locations"   name="selectedLocations" [(ngModel)]="selectedLocations" optionLabel="location" [ngModelOptions]="{standalone: true}"></p-multiSelect>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-success w-50 mt-3" [disabled]='!f.valid'>Save</button>
+                    </div>   
+                </form> 
+            </div>
+        </div>
+      </div>
+      
+
+    </p-dialog>
+
+<div class="container d-flex justify-content-center table-responsive  py-5">
+    <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Zone</th>
+            <th class="table-secondary" scope="col">#</th>
+            <th class="table-secondary" scope="col">Zone</th>
             <th scope="col" class="text-center">Locations</th>
+            <th scope="col">Delete</th>
          
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let detail of zoneLocations">
            
-            <td scope="row">{{ detail.id }}</td>
-            <td scope="row">{{ detail.zone }}</td>
-            
-            <div scope="row" class="d-inline-block" *ngFor="let d of detail.locations">
-                <td>{{d.location}}</td>
-            </div>
+            <td scope="row" class="table-secondary">{{ detail.id }}</td>
+            <td scope="row" class="table-secondary">{{ detail.zone }}</td>
+            <td class="d-inline-block" *ngFor="let d of detail.locations">{{d.location}}</td>
+            <td scope="row"><button class="btn" (click)="onDelete(detail.id)"><i class="fa-solid fa-trash"></i></button>
+
         
             
           </tr>
